--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header
 {
 	color: white;
 	text-decoration: none;
-	padding: 5px 20px
+	padding: 5px 20px;
 	font-family: "Yoster Island";
 	font-size: 15px;
 }
