--- a/style.css
+++ b/style.css
@@ -29,6 +29,6 @@ header
 	color: white;
 	text-decoration: none;
 	padding: 5px 20px;
-	font-family: "Yoster Island";
+	font-family: "Roboto", sans-serif;
 	font-size: 15px;
 }
