--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a
 
 header
 {
-	background-image: url(pic1.jpg);
+	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5))url(pic1.jpg);
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
