--- a/style.css
+++ b/style.css
@@ -43,3 +43,20 @@ header
 {
 	border: 1px solid white;
 }
+
+.title
+{
+	position: absolute;
+	width: 1200px;
+	margin-left: 0px;
+	margin-top: 0px;
+}
+
+h1
+{
+	color: white;
+	text-transform: uppercase;
+	font-size: 70px;
+	text-align: center;
+	margin-top: 275px;
+}
