--- a/style.css
+++ b/style.css
@@ -52,6 +52,12 @@ header
 	margin-top: 0px;
 }
 
+.main-nav:hover
+{
+	background-color: darkorange;
+	transition: all 0.5s ease-in;
+}
+
 h1
 {
 	color: white;
