--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@ header
 	margin-top: 0px;
 }
 
-.main-nav:hover
+.main-nav li a:hover
 {
-	background-color: darkorange;
+	border: 1px solid white;
 	transition: all 0.5s ease-in;
 }
 
